# DeepMol

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  README_pypi.md  environment.yml  extra-requirements.txt  mol2vec.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  smiles_processed.py  smiles_transformer.ipynb  tox.ini
.github/workflows/: cd.yml  ci.yml
Docker/: Dockerfile  Dockerfile_old  Makefile
deepmol.egg-info/: PKG-INFO  SOURCES.txt
docs/: conf.py  deepmol.base.md  deepmol.base.rst  deepmol.compound_featurization.md  deepmol.compound_featurization.nc_mfp.md  deepmol.compound_featurization.nc_mfp.rst  deepmol.compound_featurization.neural_npfp.md  deepmol.compound_featurization.neural_npfp.rst  deepmol.compound_featurization.rst  deepmol.datasets.md  deepmol.datasets.rst  deepmol.encoders.md  deepmol.encoders.rst  deepmol.evaluator.md  deepmol.evaluator.rst  deepmol.feature_importance.md  deepmol.feature_importance.rst  deepmol.feature_selection.md  deepmol.feature_selection.rst  deepmol.imbalanced_learn.md  deepmol.imbalanced_learn.rst  deepmol.loaders.md  deepmol.loaders.rst  deepmol.loggers.md  deepmol.loggers.rst  deepmol.md  deepmol.metrics.md  deepmol.metrics.rst  deepmol.models.md  deepmol.models.rst  deepmol.parallelism.md  deepmol.parallelism.rst  deepmol.parameter_optimization.md  deepmol.parameter_optimization.rst  deepmol.pipeline.md  deepmol.pipeline.rst  deepmol.pipeline_optimization.md  deepmol.pipeline_optimization.rst  deepmol.rst  deepmol.scalers.md  (+17 more)
docs/deepmol_docs/: about_us.md  feature_selection.md  featurization.md  hyperparameter_optimization.md  imbalanced_learn.md  installation.md  introduction.md  load_dataset.md  loaders.md  model_explainability.md  models.md  molecular_standardizers.md  pipeline.md  pipeline_optimization.md  publications.md  scaling.md  splitters.md  unsupervised_learning.md
docs/manual_docs/: about_us.md  compound_featurization.md  compound_standardization.md  data_split.md  feature_importance.md  feature_selection.md  featurization.md  imbalanced_learn.md  installation.md  load_dataset.md  model_explainability.md  models.md  pipeline.md  publications.md  scaling.md  splitters.md  unbalanced_datasets.md  unsupervised_learning.md
examples/: BalancedDatasetTest.ipynb  RandomForestTest.ipynb  SVMTest.ipynb  test3.py  test_cnn_keras.ipynb  test_dc_models.py  test_deepchem_hyperparamoptcv.ipynb  test_keras.ipynb  test_rdkit_3d_descriptors.py
examples/notebooks/: feature_selection.md  featurization.ipynb  molecular_standardizers copy.ipynb  molecular_standardizers.ipynb  molecular_standardizers.md  splitters.ipynb  test_draw_bits.ipynb
examples/workshop_bod/: feature_selection.ipynb  feature_selection.md  featurization.ipynb  featurization.md  hyperparameter_optimization.ipynb  hyperparameter_optimization.md  imbalanced_learn.ipynb  loaders.ipynb  loaders.md  model_explainability.ipynb  models.ipynb  models.md  molecular_standardizers.ipynb  molecular_standardizers.md  pipeline.ipynb  pipeline.md  pipeline1.ipynb  scaling.ipynb  scaling.md  splitters.ipynb  splitters.md  unsupervised_learning.ipynb  unsupervised_learning.md
pacbb21_paper/: README.md  a549_hyperparams.pkl  ccrfcem_hyperparams.pkl  model_build_functions.py  nci109_hyperparams.pkl  nci1_hyperparams.pkl  pc3_hyperparams.pkl  plot_important_morgan_bits.py  plot_results.py  prep_nci_data.py  run_ensembles.py  run_interpretability.py  run_models.py  split_datasets.py  utils.py
pacbb21_paper/data/: 1-balance.csv  109-balance.csv  (+2 more)
src/: 3D descriptors.ipynb  3D_descriptor_model_generators.ipynb  BalancedDatasetTest.ipynb  RandomForestTest.ipynb  SHAP_test.ipynb  SMOTEENNTest.ipynb  SVMTest.ipynb  Untitled.ipynb  __init__.py  deepbio_dataset_3d_convertable.csv  morgan_bits_test.ipynb  preprocessed_dataset.csv  preprocessing.py  regression_test.ipynb  run_experiment_3d.py  test.ipynb  test.py  test2.py  test3.py  test_cnn_keras.ipynb  test_dc_models.py  test_deepchem_hyperparamoptcv.ipynb  test_keras.ipynb
test_model.params.joblib/: model.pkl
tests/: 2.SHAP_Test_2.ipynb  RandomForestTest.ipynb  __init__.py  standardization_test.ipynb  test3.py  test_cnn_keras.ipynb  test_dc_models.py  test_keras.ipynb  test_rdkit_3d_descriptors.py
(+427 files in other folders)
