[metadata]
name = DeepMol
version = 0.0.0
description = DeepMol: a python-based machine and deep learning framework for drug discovery
long_description = file: README.md
keywords = machine-learning, deep-learning, cheminformatics, drug-discovery
author = DeepMol Team
license = BSD 2-Clause License
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.7
    Programming Language :: Python :: 3 :: 3.8

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.7
zip_safe = False
include_package_data = True
install_requires =
    rdkit-pypi==2022.3.5
    smilespe==0.0.3
    seaborn==0.12.0
    joblib==1.1.0
    pillow==8.4.0
    h5py==3.1.0
    shap==0.41.0


[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=7.1.1
    pytest-cov>=3.0.0
    mypy>=0.942
    flake8>=4.0.1
    tox>=3.25.0
    rdkit-pypi==2022.3.5
preprocessing =
    gensim==4.2.0
    mol2vec @ git+https://github.com/samoturk/mol2vec#egg=mol2vec
    chembl_pipeline @ git+https://github.com/chembl/ChEMBL_Structure_Pipeline.git@1.0.0
deepchem =
    torch==1.12.1
    torchvision==0.13.1
    torchaudio==0.12.1
    dgl==0.9.1
    deepchem==2.5.0


[options.package_data]
deepmol = py.typed

[flake8]
max-line-length = 160