[metadata]
name = DeepMol
version = 0.0.4.3-beta
description = DeepMol: a python-based machine and deep learning framework for drug discovery
;long_description = file: README.md
keywords = machine-learning, deep-learning, cheminformatics, drug-discovery
author = DeepMol Team
license = BSD 2-Clause License
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.7
zip_safe = False
include_package_data = True
install_requires =
    rdkit-pypi==2022.9.3

dependency_links=[
        'git+https://github.com/samoturk/mol2vec#egg=mol2vec'
    ]

[options.packages.find]
where = src

[options.package_data]
deepmol = py.typed

[flake8]
max-line-length = 160