[metadata]
name = deepmol
version = 1.1.5
description = DeepMol: a python-based machine and deep learning framework for drug discovery
keywords = machine-learning, deep-learning, cheminformatics, drug-discovery
author = DeepMol Team
license = BSD 2-Clause License
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
long_description = file: README_pypi.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.9
zip_safe = False
include_package_data = True
install_requires =
    rdkit==2023.9.1
    cached_property==1.5.2
    seaborn==0.12.0
    joblib==1.1.1
    pillow==8.4.0
    h5py==3.7.0

dependency_links=[
        'git+https://github.com/samoturk/mol2vec#egg=mol2vec'
    ]

[options.packages.find]
where = src

[options.package_data]
deepmol = py.typed

[flake8]
max-line-length = 160